fix initial scale on mobile

--- a/style.css
+++ b/style.css
@@ -261,6 +261,6 @@ html, body {
 
 footer {
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	font-size: 14px;
 }
